scss/components/_sections.scss
section, footer {
    position: relative;
    width: 100%;

    @include custom-flex(vertical, true, false);

    > .content {
        max-width: 120rem;
        width: 100vw;
        height: 100%;

        @include phone {
            padding: 0 1rem;
        }

        @include desktop {
            padding: 0 5%;
        }
    }

    .divider {
        display: block;
        width: 100%;
    }

    &#hero {
        height: 100vh;

        background-color: #fcfcfc;

        > .content {
            @include custom-flex(vertical);

            img {
                max-height: 40vh;
                max-width: 40vh;
                width: 80%;

                box-shadow: 0 4.5px 3.6px rgba(0, 0, 0, 0.052), 0 12.5px 10px rgba(0, 0, 0, 0.075),
                    0 30.1px 24.1px rgba(0, 0, 0, 0.098), 0 100px 80px rgba(0, 0, 0, 0.15);
                border-radius: 54% 46% 48% 52% / 62% 38% 62% 38%;
            }

            .info {
                padding: 2rem;

                h1 {
                    font-size: 4rem;
                }

                p {
                    font-size: 1.5rem;
                }

                .action {
                    margin-top: 2.5rem;
                }
            }

            @include phone {
                flex-direction: column;
                text-align: center;
            }

            @include desktop {
                flex-direction: row;
            }
        }
    }

    &#about {
        position: relative;
        min-height: 100vh;
        height: 50vh;
        padding-top: 200px; // Divider padding
        padding-bottom: 350px; // Divider padding

        color: $lightText;
        background: linear-gradient(to right, #f957b0, #eb7d0e);

        > .content {
            @include custom-flex(vertical);
        }

        > .wave-divider {
            &.top .shape-fill {
                fill: #fcfcfc;
            }
            &.bottom .shape-fill {
                fill: #e0e0e0;
            }
        }
    }

    &#projects {
        min-height: 100vh;
        padding-bottom: 5rem;

        background-color: #e0e0e0;

        > .content {
            height: 100%;

            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: flex-start;
        }
    }
}

footer {
    height: 50vh;

    > .content {        
        @include custom-flex(vertical, false, true);
    }

}

